feat: add things module
